# FrameworkRUDA

./: CMakeLists.txt  README.md  install.sh
Framework/Analysis/: CMakeLists.txt
Framework/Analysis/include/AnalysisRUDA/: AnalysisBase.h  AnalysisManagerBase.h  CutObjectManager.h  DataModel.h
Framework/Analysis/src/: AnalysisBase.cxx  AnalysisManagerBase.cxx  CutObjectManager.cxx  DataModel.cxx
Utilities/: CMakeLists.txt
Utilities/Common/: CMakeLists.txt
Utilities/Common/include/CommonRUDA/: AnalysisUtils.h  CommonUtils.h  DynamicTable.h  FunctionTraits.h  HelperCommon.h  HelperHists.h  HistUtils.h  InputFileManager.h  OutputHistManager.h  OutputManager.h  Trends.h
Utilities/Common/src/: AnalysisUtils.cxx  CommonUtils.cxx  DynamicTable.cxx  FunctionTraits.cxx  HelperCommon.cxx  HelperHists.cxx  HistUtils.cxx  InputFileManager.cxx  OutputHistManager.cxx  OutputManager.cxx  Trends.cxx
Utilities/O2/: CMakeLists.txt
Utilities/O2/include/O2_RUDA/: BCschemaUtils.h  CCDB.h  Constants.h  DetectorFIT.h  EventChDataParams.h  FunctorField.h  MCP.h  SyncDigits.h  Timeseries.h  TimestampInfo.h  Triggers.h  WorkerManager.h
Utilities/RunManager/: CMakeLists.txt
Utilities/RunManager/include/RunManagerRUDA/: RunManager.h
Utilities/RunManager/src/: RunManager.cxx
cmake/: FindAliRoot.cmake  PrepareDependencies.cmake
macro/analysis/: fullAnalysis.C  makeCorr.C  makeTrends.C
macro/digits/: makeDynTable.C  makeTrends.C  runAnalysisFull.C  runAnalysisFull_tmp.C
macro/digits/1/: SyncDigits.h  makeDynTable.C  runAnalysisFullFIT.C  runAnalysisFullFIT_fast.C
macro/digits/analysis/: SyncDigits.h  readCSV.h  runAnalysisFullCalib.C  runAnalysisFullFIT.C  runAnalysisFull_Spectra.C  runAnalysisFull_multi.C  runAnalysisFull_standard.C  runAnalysisFull_template.C
macro/digits/analysis2/: runAnalysisFullFIT.C  runAnalysisFullFIT_fast.C  runAnalysisFullFIT_fast2.C  runAnalysisFullFIT_multi.C  runAnalysisFull_multi.C
macro/digits/analysis3/: run.sh  runAnalysisFullFIT.C  runAnalysisFull_Spectra.C  runAnalysisFull_SpectraPerBC.C  runAnalysisFull_SpectraTs.C  runAnalysisFull_template.C  runMulti.sh
macro/digits/analysis4/: Triggers.h  mergeHists.sh  run.sh  runAnalysisFullFIT.C  runAnalysisFull_Spectra.C  runAnalysisFull_SpectraPerBC.C  runPeriods.sh  tableTrgCnt.C
macro/digits/analysis5/: runAnalysisFull_Spectra.C  runAnalysisFull_SpectraPerBC.C  runAnalysisFull_SpectraTs.C
macro/examples/ageing/: taskCorrLumi.C  taskTrendSpectrum.C
macro/examples/ageing/grid/: AliTaskAgeingT0.cxx  AliTaskAgeingT0.h  EventStruct.h  runGridTask.h  runTask.C
macro/examples/lumi/: TrgRatioRawStruct.h  makeTrends.C  runTaskGridCustom.C  taskAnalysisFull.C  taskGrid.C  taskPostProcces.C  test_openmp.C
macro/examples/lumi/grid/: AliMyTaskEfficiencyT0.cxx  AliMyTaskEfficiencyT0.h  runGridTask.h  runTask.C
macro/grid/: downloadResult.C  downloadResult_batch.C  gridFull.C  gridFull.sh  gridKill.C  gridKillByName.C  gridPrint.C  gridResubmit.C  gridSubmit.C  makeRCTtrees.C  merge.C
macro/hists/: decomposeHists.C  divideHists.C
macro/run_manager/: makeRunTree.C  runAnalysis.C
macro/tables/: TimeSpectraInfoObject.h  makeDynTable.C  makeDynTableCalib.C  makeDynTableCalibChunk.C  makeDynTableCalibObjects.C  makeDynTableFIT.C  makeDynTableMeanTime.C  makeDynTableMeanTimeChunk.C  makeDynTableTriggers.C
macro/trigger/: makeAliTrgClassTree.C  makeTrgClassTree.C  printTrgClass.C
scripts/: convertPeriod2digits.sh  ctf2dig.sh  initO2_FLP.sh  restoreFLP.sh  runAnalysis.sh  runMakeOffsets.sh  suppressFLP.sh  uploadOffsetCalibFT0.sh
scripts/calibration/: calib_ctf.sh  calib_ctf_period.sh
scripts/ctf2digits/: convertCTF2digits.sh  ctf2dig.sh  ctf2dig_rawTF.sh
scripts/merger/: mergeHists.sh
scripts/tmp/: runPeriods.sh
src/: CMakeLists.txt
src/analysis/: AnalysisBase.h  AnalysisManagerBase.cxx  AnalysisManagerBase.h  CMakeLists.txt  CutObjectManager.cxx  DataModel.cxx  DataModel.h
src/common/: AnalysisUtils.cxx  AnalysisUtils.h  CMakeLists.txt  HelperCommon.cxx  HelperCommon.h  HelperHists.cxx  HistUtils.cxx  HistUtils.h
src/grid/: GridManager.cxx  GridManager.h  GridUtils.cxx  GridUtils.h  JobObject.h
src/run_manager/: CMakeLists.txt  RunManager.cxx  RunManager.h
src/trigger/: CMakeLists.txt  TriggerClass.cxx  TriggerClass.h  TriggerManager.cxx
tmp/: CMakeLists.txt
tmp/grid/: CMakeLists.txt  GridHandlerManager.cxx  GridHandlerManager.h  GridUtils.cxx  JobObject.cxx
tmp/trigger/: TriggerClass.h  TriggerManager.h
